WA-02 Removed jQuery, opetd for fetch api, added catch methods

--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <head>
   <meta charset="utf-8" />
   <title>Get Client Machine IP Address using JavaScript and JSON</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
-  <script type="text/javascript" src="dist/bundle.js">
-
-  </script>
 </head>
 
 <body>
@@ -18,8 +14,9 @@
   <option value="Klaipeda">Klaipėda</option>
  </select>
 
- <div class="obs"></div>
+ <div class="container"></div>
  <script src="https://cdn.aerisapi.com/sdk/js/aerisweather.min.js"></script>
+ <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 
 </html>
